--- a/search.html
+++ b/search.html
@@ -42,8 +42,7 @@
         }
 
         .search-result-item a {
-            font-size: 1.2em;
-            font-weight: bold;
+            text-decoration: none;
         }
 
         .search-snippet {
@@ -73,7 +72,7 @@
             box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
         }
         #search-button {
-            padding: 10px 16px;
+            padding: 8px 16px;
             font-size: 1em;
             background-color: #005aff;
             color: white;
