検索まわりのcss調整

--- a/search.html
+++ b/search.html
@@ -36,7 +36,7 @@
         <div id="search-container">
             <input type="text" id="search-input" placeholder="検索ワードを入力..." aria-label="検索">
             <button id="search-button">
-                <i class="fa fa-search" aria-hidden="true"></i> 検索
+                <i class="fa fa-search" aria-hidden="true"></i> 
             </button>
         </div>
 
