--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
                             <span class="nav-description">RSSフィード</span>
                         </a>
                     </li>
+                     <li class="nav-item">
+                        <a href="./search.html" aria-label="検索">
+                            <i class="fa fa-search" aria-hidden="true"></i>
+                            <span class="nav-description">検索</span>
+                        </a>
+                    </li>
                 </ul>
             </div>
             
