--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         </a>
                     </li>
                      <li class="nav-item">
-                        <a href="./search.html" aria-label="検索">
+                        <a href="./search" aria-label="検索">
                             <i class="fa fa-search" aria-hidden="true"></i>
                             <span class="nav-description">検索</span>
                         </a>
