--- a/header.html
+++ b/header.html
@@ -1,6 +1,6 @@
 <header>
     <div class="container">
-        <h1 class="blog-title"><a href="https://morvra.github.io"><img src="./bullet_icon.png" class="blog-icon">morvra lists</a></h1>
+        <h1 class="blog-title"><a href="https://morvra.github.io"><img src="./bullet_icon.png" class="blog-icon" alt="blog-icon">morvra lists</a></h1>
         <nav>
             <ul>
                 <li><a href="./article?id=uVd0FvsIz5xGXZkp1GR93wB3" title="about"><i class="fa fa-info" aria-hidden="true"></i></a></li>
