--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name=”description“ content="morvra(もーぶら)が考えたこと、調べたこと、作ったものなどなんでも書く場所です。面白がっていただけたら幸いです。" />
     <title>morvra lists</title>
     
     <link rel="stylesheet" href="./styles.css">
