--- a/search.html
+++ b/search.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="nLHELesYpOxGCYTVdLHn4o9Zi9qvN5779teSIKYZWmk" />
     <title>検索 - morvra lists</title>
     
     <link rel="stylesheet" href="./styles.css">
