--- a/taglist.html
+++ b/taglist.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="nLHELesYpOxGCYTVdLHn4o9Zi9qvN5779teSIKYZWmk" />
     <title>Taglist - morvra lists</title>
     <link rel="stylesheet" href="./styles.css">
     <link href='./bullet_icon.png' rel='icon' type='image/x-icon'/>
