--- a/dynalistdiary.html
+++ b/dynalistdiary.html
@@ -2,7 +2,11 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <link href='./dd_icon.png' rel='icon' type='image/x-icon'/>
+    <link href='./dd_icon.png' rel='shortcut icon'/>
+    <link href='./dd_icon.png' rel='apple-touch-icon'/>
+
     <title>Dynalist 連用日記</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
