--- a/dynalistdiary.html
+++ b/dynalistdiary.html
@@ -131,6 +131,7 @@
         /* コンテナとカラム表示 */
         #entries-container {
             display: flex;
+			align-items: flex-start;
             flex-wrap: nowrap;
             gap: 20px;
             padding-bottom: 20px;
