--- a/dynalistdiary.html
+++ b/dynalistdiary.html
@@ -122,10 +122,10 @@
             #search-controls { justify-content: flex-end; }
             #utility-controls { flex-shrink: 0; }
             #search-input { width: 120px; }
-            #today-button, #random-button, #settings-toggle-button, .nav-button { width: 40px; height: 40px; padding: 0; display: flex; align-items: center; justify-content: center; }
+            #today-button, #random-button, #settings-toggle-button, .nav-button, #search-button, #clear-search-button { width: 40px; height: 40px; padding: 0; display: flex; align-items: center; justify-content: center; }
             #settings-toggle-button span { display: none; }
             .nav-button { font-size: 1.1em; }
-            #date-picker { appearance: none; flex-grow: 1; max-width: 130px; text-align: center; padding: 10px 0; }
+            #date-picker { appearance: none; flex-grow: 1; max-width: 130px; height: 38px; text-align: center; padding: 0px 4px; }
             #entries-container { flex-wrap: wrap; justify-content: center; padding-bottom: 10px; min-height: auto; }
             .year-column, .day-column, .search-card { width: 86vw; max-width: 100vw; }
         }
