--- a/dtl.html
+++ b/dtl.html
@@ -7,7 +7,12 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="DTL" />
     <title>DailyTaskList</title>
-	<script src="https://apis.google.com/js/api.js" onload="initClient()"></script>
+	<script>
+	    function handleClientLoad() {
+	        gapi.load('client:auth2', initClient);
+	    }
+	</script>
+	<script src="https://apis.google.com/js/api.js" async defer onload="handleClientLoad"></script>
     <script src="https://cdn.tailwindcss.com"></script>
 	<link href='./dtlfavicon.ico' rel='icon' type='image/x-icon'/>
     <link href='./dtlicon.png' rel='shortcut icon'/>
