--- a/dtl.html
+++ b/dtl.html
@@ -2603,40 +2603,38 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 
 <script>
-  const CLIENT_ID = '134193775188-svab18grq6f1g3vt3fk0oaqdvknha5ru.apps.googleusercontent.com';
-  const SCOPES = 'https://www.googleapis.com/auth/drive.appdata https://www.googleapis.com/auth/calendar.readonly https://www.googleapis.com/auth/calendar.events';
+function initClient() {
+  gapi.load("client:auth2", () => {
+    gapi.client.init({
+      clientId: CLIENT_ID,   // 既存の定義を利用
+      scope: SCOPES,         // 既存の定義を利用
+      discoveryDocs: [
+        "https://www.googleapis.com/discovery/v1/apis/drive/v3/rest",
+        "https://www.googleapis.com/discovery/v1/apis/calendar/v3/rest"
+      ]
+    }).then(() => {
+      console.log("✅ Google API client initialized");
+      gapi.auth2.getAuthInstance().isSignedIn.listen(updateSigninStatus);
+      updateSigninStatus(gapi.auth2.getAuthInstance().isSignedIn.get());
 
-  function initClient() {
-    gapi.load("client:auth2", () => {
-      gapi.client.init({
-        clientId: CLIENT_ID,
-        scope: SCOPES,
-        discoveryDocs: [
-          "https://www.googleapis.com/discovery/v1/apis/drive/v3/rest",
-          "https://www.googleapis.com/discovery/v1/apis/calendar/v3/rest"
-        ]
-      }).then(() => {
-        console.log("✅ Google API client initialized");
-        gapi.auth2.getAuthInstance().isSignedIn.listen(updateSigninStatus);
-        updateSigninStatus(gapi.auth2.getAuthInstance().isSignedIn.get());
-
-        document.getElementById("authorize_button").onclick = handleAuthClick;
-        document.getElementById("signout_button").onclick = handleSignoutClick;
-        document.getElementById("manual-sync-button").onclick = manualSync;
-      }).catch(err => {
-        console.error("Error initializing Google API client:", err);
-      });
+      document.getElementById("authorize_button").onclick = handleAuthClick;
+      document.getElementById("signout_button").onclick = handleSignoutClick;
+      document.getElementById("manual-sync-button").onclick = manualSync;
+    }).catch(err => {
+      console.error("Error initializing Google API client:", err);
     });
-  }
+  });
+}
 
-  function handleAuthClick() {
-    console.log("🔑 handleAuthClick called");
-    gapi.auth2.getAuthInstance().signIn();
-  }
+function handleAuthClick() {
+  console.log("🔑 handleAuthClick called");
+  gapi.auth2.getAuthInstance().signIn();
+}
 
-  function handleSignoutClick() {
-    gapi.auth2.getAuthInstance().signOut();
-  }
+function handleSignoutClick() {
+  gapi.auth2.getAuthInstance().signOut();
+}
+
 </script>
 
 <script src="https://apis.google.com/js/api.js" async defer onload="initClient()"></script>
