--- a/dtl.html
+++ b/dtl.html
@@ -258,9 +258,9 @@
         <div id="projects" class="tab-content">
             <div class="bg-white p-6 rounded-lg shadow-md">
                 <h2 class="text-xl font-bold mb-4">プロジェクト管理</h2>
-                <div class="flex space-x-4 mb-4">
+                <div class="space-x-4 mb-4">
                     <input type="text" id="project-name" placeholder="プロジェクト名" class="flex-grow p-2 border rounded-lg">
-                    <input type="color" id="project-color" value="#4a90e2" class="p-1 border rounded-lg h-10 w-12">
+                    <input type="color" id="project-color" value="#4a90e2" class="p-1 my-2 border rounded-lg h-10 w-12">
                     <button id="add-project-btn" class="bg-purple-500 hover:bg-purple-600 text-white font-bold py-2 px-4 rounded-lg transition-colors duration-200 shadow">＋ プロジェクトを追加</button>
                 </div>
                 <div class="mt-6 overflow-x-auto">
