--- a/dtl.html
+++ b/dtl.html
@@ -314,8 +314,8 @@
                 <div class="space-y-6">
                     <!-- Google Drive Sync: START -->
                     <div class="border p-4 rounded-lg">
-                        <h3 class="text-lg font-semibold mb-3">Google Drive 同期</h3>
-                        <p class="text-sm text-gray-600 mb-3">タスクデータをGoogle Driveに保存し、他のデバイスと同期します。</p>
+                        <h3 class="text-lg font-semibold mb-3">Google Drive</h3>
+                        <p class="text-sm text-gray-600 mb-3">タスクデータをGoogle Driveに保存し、他のデバイスと同期します(管理者専用)</p>
                         <div id="auth-container">
                             <button id="authorize_button" class="bg-gray-700 hover:bg-gray-800 text-white font-bold py-2 px-4 rounded-lg" disabled>API Loading...</button>
                         </div>
