--- a/dtl.html
+++ b/dtl.html
@@ -13,7 +13,7 @@
     <link href='./dtlicon.png' rel='apple-touch-icon'/>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Inter', sans-serif; background-color: #f3f4f6; padding-top: 120px; }
+        body { font-family: 'Inter', sans-serif; background-color: #f3f4f6; }
         
         /* header for desktop */
         @media (min-width: 769px) {
