--- a/dtl.html
+++ b/dtl.html
@@ -20,7 +20,12 @@
             .header {
                 background: white;
                 box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+				position: fixed;
+				width: 100%;
+		        top: 0;
+		        z-index: 1;
             }
+			body { padding-top: 110px; }
 			.sections-wrapper { padding-bottom:88px; }
         }
         
@@ -166,7 +171,7 @@
 
 <div class="header">
     <div class="container mx-auto max-w-7xl">
-        <header class="mobile-compact-header bg-white p-4 pb-1 flex flex-col md:flex-row justify-between items-center header-content">
+        <header class="mobile-compact-header bg-white p-4 py-1 flex flex-col md:flex-row justify-between items-center header-content">
             <div class="flex-1">
                 <h1 class="text-xl font-bold text-gray-700">DailyTaskList</h1>
                 <p id="current-date" class="text-sm text-gray-500"></p>
