--- a/dtl.html
+++ b/dtl.html
@@ -576,7 +576,7 @@
         // Dropbox 同期機能の初期化
         async function initializeDropboxSync() {
             // ここにDropboxアプリのクライアントIDを設定してください
-            const DROPBOX_CLIENT_ID = 'YOUR_CLIENT_ID'; // ★★★ 要設定 ★★★
+            const DROPBOX_CLIENT_ID = '0fno7q10xgfdyki';
             const REDIRECT_URI = window.location.origin + window.location.pathname;
 
             if (DROPBOX_CLIENT_ID === 'YOUR_CLIENT_ID') {
