--- a/dtl.html
+++ b/dtl.html
@@ -428,7 +428,7 @@
     </div>
 </div>
 
-<script src="https://unpkg.com/dropbox/dist/Dropbox-sdk.min.js"></script>
+<script src="https://unpkg.com/dropbox@10.34.0/dist/Dropbox-sdk.min.js"></script>
 
 <script>
     document.addEventListener('DOMContentLoaded', () => {
